patient-frontend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-frontend-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: patient-frontend
  template:
    metadata:
      labels:
        app: patient-frontend
    spec:
      containers:
        - name: patient-frontend
          image: patient-frontend-k8s:1.0
#          image: jasvinjames/fintrack-frontend-k8s

          ports:
            - containerPort: 3000
          # envFrom:
          # - configMapRef:
          #     name: fintrack-frontend-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: patient-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: patient-frontend
  ports:
    - name: http
      port: 3084
      targetPort: 3000
      nodePort: 30000
