patient-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patient-ingress
  labels:
    name: patient-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mypatients.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: patient-frontend-service
                port:
                  number: 3000
          - pathType: Prefix
            path: "/patient_end"
            backend:
              service:
                name: patient-backend-service
                port:
                  number: 8081
